# tt-coach

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_admission_and_trust.py  003_tighten_admission.py  af4737878865_add_view_count_to_video.py
app/: __init__.py  main.py
app/analysis/: video_insights.py
app/api/: routes.py
app/core/: config.py  db.py  logging.py
app/ingest/: __main__.py  cli.py  dedupe.py  instagram_deferred.py  topics.py  url_validate.py  youtube.py
app/llm/: base.py  factory.py  gemini.py  ollama.py  openai_provider.py  prompts.py  schemas.py
app/models/: __init__.py  schema.py
app/ranking/: feed_query.py  personalize.py  score.py
app/scheduler/: jobs.py  run_once.py
app/templates/: base.html  coaches.html  feed.html  profile.html  video_detail.html
app/transcribe/: whisper.py
app/vision/: embeddings.py  frames.py  index.py  pipeline.py
app/web/: flash.py  routes.py
scratch/: backfill_views.py  check_db.py
seeds/: search_queries.example.txt  search_queries.txt  youtube_channels.example.txt  youtube_channels.txt
tests/: conftest.py  test_admission.py  test_channel_uploads.py  test_face_match.py  test_feed_dedupe.py  test_health.py  test_pagination.py  test_prompts.py  test_related_discovery.py  test_video_generate_insights.py  test_vision_quorum.py
