[project]
name = "tt-coach"
version = "0.1.0"
description = "Personal AI Table Tennis coaching video curator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "google-api-python-client>=2.154.0",
    "google-auth>=2.36.0",
    "google-generativeai>=0.8.3",
    "openai>=1.58.0",
    "apscheduler>=3.10.4",
    "numpy>=1.26.0",
    "faiss-cpu>=1.9.0",
    "opencv-python-headless>=4.10.0",
    "onnxruntime>=1.19.0",
    "insightface>=0.7.3",
    "faster-whisper>=1.1.0",
    "yt-dlp>=2024.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
